[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "deep-ela"
version = "0.1.0"
description = "Deep Exploratory Landscape Analysis — lightweight, download-on-first-use checkpoints"
readme = "Readme.md"  
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Moritz Vinzent Seiler, Konstantin Dietrich" }]
keywords = ["ELA", "Exploratory Landscape Analysis", "optimization", "meta-learning"]

# Minimal deps:
dependencies = [
  "torch",
  "pyyaml",
  "lightning",
  "pydoe",
  "einops",
  "numpy",
  "pandas",
  "scipy",
]

[project.optional-dependencies]
test = [
  "pytest>=8"
]

[project.urls]
Homepage = "https://github.com/konsdt/deep_ela"
Issues   = "https://github.com/konsdt/deep_ela/issues"

[tool.hatch.build]
# Exclude for BOTH wheel and sdist
exclude = [
  "deep_ela/models/**",
  "tests/**",
  "examples/**",
  "*.ipynb",
  ".github/**",
]

[tool.hatch.build.targets.wheel]
packages = ["deep_ela"]
